@@ -1,4 +1,4 @@
-package com.xmin.lecture.restful;
+package com.xmin.lecture.vector;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.ai.document.Document;
@@ -6,30 +6,39 @@ import org.springframework.ai.vectorstore.VectorStore;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.io.*;
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @RestController
 @RequiredArgsConstructor
-public class VectorStoreWriteController {
+public class VectorController {
 
     final VectorStore vectorStore;
 
-    @GetMapping("/vec/write")
-    public String chatWithRole() {
-        StringBuilder text = new StringBuilder();
-        ClassLoader classLoader = VectorStoreWriteController.class.getClassLoader();
+
+    @GetMapping("/ai/load")
+    public String loadVector() throws IOException {
+        StringBuilder stringBuilder = new StringBuilder();
+
+        ClassLoader classLoader = VectorController.class.getClassLoader();
         InputStream inputStream = classLoader.getResourceAsStream("nocode.txt");
         try (BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream))) {
+
             String line;
             while ((line = reader.readLine()) != null) {
-                text.append(line);
+
+                stringBuilder.append(line);
             }
-        } catch (IOException e) {
-            throw new RuntimeException(e);
+
         }
-        vectorStore.write(Stream.of(text.toString().split("。")).map(Document::new).toList());
+        vectorStore.write(Stream.of(stringBuilder.toString().split("。")).map(Document::new).collect(Collectors.toList()));
+
         return "success";
+
     }
 
 }
